--- a/apigateway/helm/templates/deployment.yaml
+++ b/apigateway/helm/templates/deployment.yaml
@@ -22,6 +22,8 @@ kind: Deployment
 metadata:
   name: {{ include "common.names.fullname" . }}
   labels:
+    app: {{ $apigwname }}
+    version: {{ .Values.image.tag | default .Chart.AppVersion }}
     {{- include "common.labels.standard" . | nindent 4 }}
     {{- with .Values.extraLabels -}}
     {{ toYaml . | nindent 4 }}
