Adjust ingress for new service port names

--- a/apigateway/helm/templates/ingress.yaml
+++ b/apigateway/helm/templates/ingress.yaml
@@ -82,7 +82,7 @@ spec:
               service:
                 name: {{ $svcName }}
                 port:
-                  name: {{ default (printf "%s%s" $name "port") $ing.svcPort  }}
+                  name: {{ default (printf "%s%s%s" "http-" $name "port") $ing.svcPort  }}
               {{- else }}
               serviceName: {{ $svcName }}
               servicePort: {{ default (printf "%s%s" $name "port") $ing.svcPort  }}
