--- a/apigateway/helm/templates/ingress.yaml
+++ b/apigateway/helm/templates/ingress.yaml
@@ -44,8 +44,14 @@ metadata:
     {{- with $.Values.extraLabels -}}
     {{ toYaml . | nindent 4 }}
     {{- end }}    
-  {{- with .annotations }}
   annotations:
+    {{- if (eq $ing.className "nginx") -}}
+    {{- $svcName := default (printf "%s-%s" (include "common.names.fullname" $) $name ) $ing.svcName -}}
+    {{- $namespace := $.Release.Namespace }}
+    nginx.ingress.kubernetes.io/service-upstream: "true"
+    nginx.ingress.kubernetes.io/upstream-vhost: {{ (printf "%s.%s.%s" $svcName $namespace "svc.cluster.local" ) }}
+    {{- end }}    
+  {{- with .annotations }}
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
