--- a/apigateway/helm/templates/deployment.yaml
+++ b/apigateway/helm/templates/deployment.yaml
@@ -22,8 +22,6 @@ kind: Deployment
 metadata:
   name: {{ include "common.names.fullname" . }}
   labels:
-    app: {{ $apigwname }}
-    version: {{ .Values.image.tag | default .Chart.AppVersion }}
     {{- include "common.labels.standard" . | nindent 4 }}
     {{- with .Values.extraLabels -}}
     {{ toYaml . | nindent 4 }}
@@ -44,6 +42,8 @@ spec:
         {{- include "common.prometheus.annotations" (dict "port" .Values.prometheus.port "scrape" .Values.prometheus.scrape "path" .Values.prometheus.path "scheme" .Values.prometheus.scheme) | nindent 8 }}
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
       labels:
+        app: "apigateway"
+        version: {{ .Values.image.tag | default .Chart.AppVersion }}
         {{- include "common.labels.matchLabels" . | nindent 8 }}
         {{- with .Values.extraLabels -}}
         {{ toYaml . | nindent 8 }}
